kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: docbridge
  labels:
    name: docbridge
    environment: dev
    managed-by: gitops
